HCMPRE-169 code review comments